<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">Healers Diary</string>
    <string name="patient_name">Patient Name</string>
    <string name="browse">Browse</string>
    <string name="disease">Disease</string>
    <string name="rate">Rate per healing</string>
    <string name="signing_in">Signing In</string>
    <string name="enter_payment_received">Enter Payment Received</string>
    <string name="welcome_user">Welcome, %s!</string>
    <string name="by_signing_in_you_agree_to_our_s">
        By Signing in, you agree to our
        <a href="https://github.com/yashovardhan99/HealersDiary/blob/master/PRIVACY%20POLICY.md">Privacy Policy</a>
        and<a href="https://github.com/yashovardhan99/HealersDiary/blob/master/EULA.md">Terms of Use</a></string>
    <string name="privacy_policy_link" translatable="false">https://github.com/yashovardhan99/HealersDiary/blob/master/PRIVACY%20POLICY.md</string>
    <string name="eula_link" translatable="false">https://github.com/yashovardhan99/HealersDiary/blob/master/EULA.md</string>
    <string name="phone_number">Phone Number</string>
    <string name="client_will_be_charged_at_your_specified_rate">Client will be charged at your specified rate</string>
    <string name="payment_will_be_credited_to_the_patient_s_account_with_the_current_date_and_time">Payment will be credited to the patient\'s account with the current date and time</string>
    <string name="confirm_new_healing">Confirm New Healing</string>
    <string name="view_healing_logs">View Healing Logs</string>
    <string name="add_patient_feedback">Add new Feedback</string>
    <string name="view_patient_feedback">View Feedback logs</string>
    <string name="add_payment_detail">Add new payment</string>
    <string name="view_payment_logs">View Payment logs</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="tap_plus_to_get_started">Tap the + button to get started!</string>
    <string name="something_went_wrong">Some problem Occurred. You have been logged in but some features may not work properly</string>
    <string name="delete_warning_message">This will delete all patient records permanently. This action cannot be undone</string>
    <string name="sure_q">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="deleted">Record Deleted</string>
    <string name="add_new_patient">Add New Patient</string>
    <string name="name_cannot_be_blank">Name cannot be blank</string>
    <string name="enter_valid_amt">Enter a valid amount</string>
    <string name="payment_logs">Payment Logs</string>
    <string name="enter_patient_feedback">Enter Patient Feedback</string>
    <string name="start_typing_here">Start typing here</string>
    <string name="not_blank_error">Cannot be Blank</string>
    <string name="added">Added!</string>
    <string name="payment_added">Payment Added : %s</string>
    <string name="only_last_100_records_are_loaded">Only last 100 records are loaded</string>
    <string name="healers_diary_logo">Healers Diary Logo</string>
    <string name="this_is_a_paid_feature_you_are_allowed_to_use_it_for_free_only_under_the_app_test_program_tap_here_to_learn_more">This is a paid feature. You are allowed to use it for free only under the app test program. Tap here to learn more</string>
    <string name="update">Update</string>
    <string name="something_went_wrong_adding_record">Something went wrong and the new record was not added. Please check and try again!</string>
    <string name="paid_on_date">%1$s on %2$s</string>
    <string name="feedback">feedback</string>
    <string name="patient_feedbacks">Patient Feedbacks</string>
    <string name="not_yet_implemented">Not yet implemented</string>
    <string name="sign_out">Sign out</string>
    <string name="signs_you_out_of_the_app">signs you out of the app</string>
    <string name="donate">Donate</string>
    <string name="share">Share</string>
    <string name="home">Home</string>
    <string name="version_s">Version : %s</string>
    <string name="made_with_yashovardhan_dhanania">Made with ❤ Yashovardhan Dhanania</string>
    <string name="about">About</string>
    <string name="main_list_extra_choice">Main List Extra Choice :</string>
    <string name="more_details_will_be_available_soon">More details will be available soon</string>
    <string name="set_preferred_main_list_format">Set preferred main list format</string>
    <string name="enable_crash_reporting">Enable Crash Reporting</string>
    <string name="send_crash_reports_to_help_me_fix_issues_the_reports_are_normally_anonymous_but_may_include_details_like_your_device_model_and_android_version">Send crash reports to help me fix issues. The reports are normally anonymous but may include details like your device model and android version.</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="end_user_license_agreement">End User License Agreement</string>
    <string name="title">Reminder</string>
    <string name="content">Your daily reminder to update records is here!</string>
    <string name="channel_name">Daily reminder</string>
    <string name="channel_description">Reminds you daily about to update records. Can be modified in settings</string>
    <string name="remind_me_daily">Remind me daily</string>
    <string name="turn_it_on_to_schedule_a_daily_reminder_to_help_you_update_your_healing_records">Turn it on to schedule a daily reminder to help you update your healing records</string>
    <string name="daily_time">Daily at %s</string>
    <string name="bill">To %1$s, \n Your bill dated %2$s is due for payment. Total amount due is %3$s \n From %4$s \n Generated by Healers Diary!</string>
    <string name="bill_title">BILL</string>
    <string name="donate_via_paypal">Donate via PayPal</string>
    <string name="paypal_url">http://paypal.me/yashovardhan99</string>
    <string name="patient_data">Patient Data</string>
    <string name="generate_bill">Generate Bill [BETA]</string>
    <string name="new_patient_analytics" translatable="false">new_patient</string>
    <string name="get_started">Get Started</string>
    <string name="analytics">Analytics</string>
    <string name="patients">Patients</string>
    <string name="sample_money">$500.00</string>
    <string name="total_amount_due">Total amount due</string>
    <string name="choose_a_patient">Choose a Patient</string>
    <string name="new_payment">New Payment</string>
    <string name="charge">Charge</string>
    <string name="notes">Notes</string>
    <string name="add_healing">Add Healing</string>
    <string name="time">Time</string>
    <string name="due_amount">Due: %s</string>
    <string name="name">name</string>
    <string name="charge_per_healing">Charge per healing</string>
    <string name="due_if_any">Amount due (if any)</string>
    <string name="error_creating_activity">Error saving. Check the values you entered</string>
    <string name="patient_all_healings">%s: All Healings</string>
    <string name="patient_all_payments">%s: All Payments</string>
    <string name="patient_list_transition" translatable="false">patient_%d</string>
    <string name="date_transition" translatable="false">transition %d</string>
    <string name="patient_detail_transition" translatable="false">patient_detail_transition</string>
    <string name="edit_patient">Edit Patient</string>
    <string name="loading">Loading!</string>
    <string name="title_online">Backup &amp; Sync</string>
    <string name="import_from_v1_0">Import from v1.0</string>
    <string name="import_completed">Import completed</string>
    <string name="dangerous_settings">Dangerous settings</string>
    <string name="reset_data">Reset Data</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="overrides_all_data">This action will override all existing records. Are you sure you want to continue?</string>
    <string name="confirm">Confirm</string>
    <string name="data_cleared">Data Cleared</string>
    <string name="undo">Undo</string>
    <string name="edit_healing">Edit Healing</string>
    <string name="edit_payment">Edit Payment</string>
    <string name="export">Export</string>
    <string name="healings">Healings</string>
    <string name="payments">Payments</string>
    <string name="import_text">Import</string>
    <string name="start">Start</string>
    <string name="might_be_overwrriten_note">Any data matching existing IDs might be overwritten</string>
    <string name="must_match_an_existing_patient">Healings or payments must match an existing patient</string>
    <string name="upload_files">Upload Files</string>
    <string name="exporting_to">Exporting to %s</string>
    <string name="currently_importing_s">Currently Importing: %s</string>
    <string name="currently_exporting_s">Currently Exporting: %s</string>
    <string name="waiting">Waiting…</string>
    <string name="file_error">Could not save exported data.</string>
    <string name="exported_d_of_d">Exported %d of %d</string>
    <string name="import_error">Invalid format</string>
    <string name="import_empty">Nothing to import</string>
    <string name="import_success">Imported %d rows</string>
    <string name="import_partial">Imported %d rows (%d failed)</string>
    <string name="last_backup_time">Last backup on %s</string>
    <string name="join_2">%s and %s</string>
    <string name="join_3">%s, %s and %s</string>
    <plurals name="n_patients">
        <item quantity="one">%d patient</item>
        <item quantity="other">%d patients</item>
    </plurals>
    <plurals name="n_healings">
        <item quantity="one">%d healing</item>
        <item quantity="other">%d healings</item>
    </plurals>
    <plurals name="n_payments">
        <item quantity="one">%d payment</item>
        <item quantity="other">%d payments</item>
    </plurals>
    <string name="last_backup_note">%s were backed up (Tap to view)</string>
    <string name="backup_failed">Backup failed</string>
    <string name="cant_find_backup">Can\'t find the backup folder</string>
    <string name="cant_access_folder">Can\'t access the folder %s. Please select another folder.</string>
    <string name="import_failed_message">Your last import didn\'t complete successfully.</string>
    <string name="patient_deleted">This patient\'s records have been deleted</string>
    <string name="oops">Oops!</string>
    <string name="error_message">Looks like something went wrong. We have prepared a bug report for you. Please consider sending the report to the developer so they can fix this bug.</string>
    <string name="report_disclaimer">Note that this report might include device specific details such as device IDs and app logs which might contain sensitive data</string>
    <string name="exit">Exit</string>
    <string name="email_bug_report">Email Bug report</string>
</resources>

