<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:contentDescription="@string/healers_diary_logo"
                android:padding="16dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_full_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/oops"
                style="@style/h1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/oops"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo" />

            <TextView
                android:id="@+id/error_description"
                style="@style/subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/error_message"
                android:textAlignment="textStart"
                app:layout_constraintTop_toBottomOf="@id/oops" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/send_report"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:text="@string/email_bug_report"
                app:layout_constraintBottom_toTopOf="@id/exit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/error_description"
                app:layout_constraintVertical_chainStyle="packed" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/exit"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:text="@string/exit"
                app:layout_constraintBottom_toTopOf="@id/report_disclaimer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/send_report" />

            <TextView
                android:id="@+id/report_disclaimer"
                style="@style/body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/report_disclaimer"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>
