<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PatientView">
    <include
        layout="@layout/app_bar_layout"
        android:id="@+id/patientViewToolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/patientViewToolbar"
        app:layout_anchor="@id/patientViewToolbar"
        app:layout_anchorGravity="bottom"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patient_name"
                android:id="@+id/patientNameInDetail"
                android:textSize="34sp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textAllCaps="true"
                android:padding="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/patientDiseaseInDetail"
                android:text="@string/disease"
                android:padding="16dp"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/payment_due"
                android:id="@+id/bill"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_healing"
            android:padding="16dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#FFF"
            android:id="@+id/newHealingButton"
            android:drawableStart="@drawable/ic_add_black_24dp"
            android:drawableTint="#000"
            android:elevation="4dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/view_healing_logs"
            android:backgroundTint="#FFF"
            android:elevation="4dp"
            android:id="@+id/healingLogsButton"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:elevation="4dp"
            android:backgroundTint="#FFF"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_patient_feedback"
            android:id="@+id/newFeedbackButton"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:elevation="4dp"
            android:backgroundTint="#FFF"
            android:layout_gravity="center_horizontal"
            android:text="@string/view_patient_feedback"
            android:id="@+id/patientFeedbackLogs"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:elevation="4dp"
            android:backgroundTint="#FFF"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_payment_detail"
            android:id="@+id/enterNewPPayment"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:elevation="4dp"
            android:backgroundTint="#FFF"
            android:layout_gravity="center_horizontal"
            android:text="@string/view_payment_logs"
            android:id="@+id/viewPatientPaymentLogs"/>
        </LinearLayout>

    </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>