<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="header"
            type="com.yashovardhan99.healersdiary.utils.Header" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/heading"
                layout="@layout/header"
                bind:header="@{header}" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/healers_diary_logo"
                android:padding="12dp"
                android:src="@drawable/ic_full_logo"
                app:layout_constraintTop_toBottomOf="@id/icon" />

            <TextView
                android:id="@+id/version"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:textAlignment="center"
                android:textAppearance="@style/h1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo"
                bind:showDebugVersion="@{true}"
                tools:text="@string/version_s" />

            <TextView
                android:id="@+id/author"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="32dp"
                android:text="@string/made_with_yashovardhan_dhanania"
                android:textAlignment="center"
                android:textAppearance="@style/h1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/version" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/open_source"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/open_source_licenses"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/author" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/privacy_policy"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/privacy_policy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/open_source" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/eula"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/end_user_license_agreement"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/privacy_policy" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>