<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_type"
            android:padding="16dp"
            android:contentDescription="@string/healers_diary_logo"
            android:scaleType="fitCenter"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version_s"
            android:id="@+id/appVersionString"
            android:textSize="32sp"
            android:textAlignment="center"
            android:padding="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/made_with_yashovardhan_dhanania"
            android:textAlignment="center"
            android:textSize="24sp"
            android:padding="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logo_courtesy_yasujizr_on_github"
            android:id="@+id/imageCour"
            android:textSize="16sp"
            android:padding="16dp"
            android:textAlignment="center"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>