<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".onboarding.OnboardingActivity">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/healers_diary_logo"
            android:scaleType="centerInside"
            android:src="@drawable/app_logo_drawable"
            app:layout_constraintBottom_toTopOf="@id/get_started"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/get_started"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/get_started"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/importOnline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/importOnline"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/import_from_v1_0"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/disclaimer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/disclaimer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:visibility="gone"
            android:text="@string/by_signing_in_you_agree_to_our_s"
            android:textAlignment="center"
            android:textAppearance="@style/subtitle2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>